<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:background="@color/cardview_light_background"
    app:cardBackgroundColor="?android:attr/colorButtonNormal"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/eventImage"
            android:layout_width="113dp"
            android:layout_height="119dp"
            android:layout_margin="5dp"
            android:src="@drawable/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eventName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/EventName"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/eventImage"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/EventDescription"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="35dp"
            android:text="@string/EventDescription"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/calenderIcon"
            app:layout_constraintEnd_toEndOf="@+id/eventName"
            app:layout_constraintStart_toStartOf="@+id/eventName"
            app:layout_constraintTop_toBottomOf="@+id/eventName" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Time"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/calenderIcon"
            app:layout_constraintHorizontal_bias="0.216"
            app:layout_constraintStart_toEndOf="@+id/alarmIcon"
            app:layout_constraintTop_toTopOf="@+id/alarmIcon" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="90dp"
            android:layout_height="24dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:text="@string/EventDate"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/Time"
            app:layout_constraintEnd_toEndOf="@+id/eventName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/calenderIcon"
            app:layout_constraintTop_toTopOf="@+id/Time" />

        <ImageView
            android:id="@+id/alarmIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/Time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/eventName"
            app:srcCompat="@drawable/alarm_icon" />

        <ImageView
            android:id="@+id/calenderIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/EventDate"
            app:layout_constraintBottom_toBottomOf="@+id/Date"
            app:layout_constraintTop_toTopOf="@+id/Date"
            app:srcCompat="@drawable/date_icon"
            tools:layout_editor_absoluteX="239dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorAccent"
            android:text="@string/location"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

